2006/01/21	muppetman

	* GObject.xs: Hide CLONE from the docs; it's not something user
	code should call.

2006/01/18	kaffeetisch

	* GObject.xs: Modify the MAKE_UNDEAD and REVIVE_UNDEAD macros so
	no casts are needed when using them.

2006/01/18	kaffeetisch

	* Glib.pm: Fix a typo.

2006/01/16	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.114.

2006/01/16	kaffeetisch

	* GObject.xs: Apply patch from Rafael Garcia-Suarez that fixes the
	undead object macros on 64-bit platforms.

2006/01/16	kaffeetisch

	* GObject.xs (class_info_finish_loading): Hush a compiler warning.

2006/01/16	kaffeetisch

	* GLog.xs (gperl_log_handler): Add a comment describing a rare
	threading-related crash.

2006/01/15	muppetman

	* Glib.pm, GObject.xs, GType.xs: Change the way GObject type
	mappings are initialized.

	Previously, gperl_register_object() would not only map a GType to a
	perl package name, but would set up the @ISA entry for that type by
	introspection; if the parent type was not yet registered, the
	mapping would go into a "pending isa" list, and the code would walk
	that list on each registration.  This left a nice loophole that was
	triggered by the addition of GInitiallyUnowned into libgobject -- if
	a type's parent is unknown to the bindings, that type simply doesn't
	get its ancestry set up correctly.  This ended up breaking all
	nontrivial gtk2-perl programs.  Shame on me for thinking up such a
	fragile scheme.

	Changed the code in various subtle ways.  Added the idea of "lazy
	loading", inspired by Gtk-Perl.  gperl_register_object() still
	registers the association of a GType and a package name, but adds to
	@ISA only "Glib::Object::_LazyLoader".  ISA setup is performed by
	the internal function class_info_finish_loading(), which replaces
	the _LazyLoader name in @ISA with the class's parent and implemented
	interfaces (preserving manually appended and prepended entries).
	This is triggered one of two ways: either by calling